# connectedmotion-ffi

./: README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/connectedmotion_ffi/: ConnectedmotionFfiPlugin.kt
android/src/test/kotlin/com/example/connectedmotion_ffi/: ConnectedmotionFfiPluginTest.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/connectedmotion_ffi_example/: MainActivity.kt
example/integration_test/: plugin_integration_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/test/: widget_test.dart
ios/: connectedmotion_ffi.podspec
ios/Classes/: ConnectedmotionFfiPlugin.swift
ios/Classes/opencv-cpp/: main-seg.cpp  main.cpp  main.h  main_seq.h
ios/ncnn.xcframework/ios-arm64_arm64e/ncnn.framework/Versions/A/Headers/ncnn/: platform.h
ios/openmp.xcframework/ios-arm64_arm64e/openmp.framework/Versions/A/: openmp
ios/openmp.xcframework/ios-x86_64-simulator/openmp.framework/Versions/A/: openmp
lib/: connectedmotion_ffi.dart  connectedmotion_ffi_method_channel.dart  connectedmotion_ffi_platform_interface.dart  ffi.dart
lib/functions/: functions.dart
test/: connectedmotion_ffi_method_channel_test.dart  connectedmotion_ffi_test.dart
